syntax = "proto3";

import "shared/entity.proto";
import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "./pbimages";

package images;


service Images {
  rpc CreateImage (stream CreateImageRequest) returns (CreateImageResponse) {}
  rpc RetrieveImages (RetrieveImagesRequest) returns (RetrieveImagesResponse) {}
  rpc DeleteImages (DeleteImagesRequest) returns (google.protobuf.Empty) {}

  rpc CloneImages (CloneImagesRequest) returns (CloneImagesResponse) {}
  rpc ChangeEntityImages (ChangeEntityImagesRequest) returns (google.protobuf.Empty) {}
}

message CloneImagesResponse {
  map<string, Image> images = 1;
}

message CloneImagesRequest {
  string access_token = 1;
  uint64 from_entity_id = 2;
  uint64 dest_entity_id = 3;
  string entity_table = 4;
}

message ChangeEntityImagesRequest {
  string access_token = 1;

  shared.Entity from = 2;
  shared.Entity dest = 3;
}


message CreateImageRequest{
  message Metadata {
    string ext = 1;
    string access_token = 2;
    shared.Entity entity = 3;
  }

  oneof corpus {
    Metadata metadata = 1;
    bytes chunk = 2;
  }
}

message Image{
  int64 size = 1;
  string uri = 2;
  shared.Entity entity = 3;
}

message CreateImageResponse {
  string image_id = 1;
  Image image = 2;
}

message RetrieveImagesRequest{
  shared.Entity entity = 1;
}

message RetrieveImagesResponse {
  map<string, Image> images = 1;
}

message DeleteImagesRequest{
  string access_token = 1;
  shared.Entity entity = 2;
}


